fixed line wrapping

--- a/client/src/styles/ApartmentCard.css
+++ b/client/src/styles/ApartmentCard.css
@@ -31,6 +31,7 @@ img {
 
 .right-info-group {
     overflow: hidden;
+    white-space: nowrap;
     height: 78px;
     padding-left: 40%;
     display: flex;
